2005-08-09  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Remove debugging echo.
	(watch6, watch6-0): Clean up properly.

2005-08-03  Jim Hyslop <jhyslop@dreampossible.ca>

	* edit.c, watch.c, watch.h, sanity.sh: fixed problems with watch not
	setting default attributes, when directory specified.

2005-07-20  Derek Price  <derek@ximbiot.com>

	* main.c: s/cvshome.org/nongnu.org.etc.../.

2005-07-12  Derek Price  <derek@ximbiot.com>

	* buffer.c, buffer.h, client.h, expand_path.c, history.c, myndbm.h,
	release.c: Add copyright notices.

2005-07-12  Derek Price  <derek@ximbiot.com>

	* client.c: Update fwrite usage to use size & count in the standard
	order.

2005-07-11  Derek Price  <derek@ximbiot.com>

	* buffer.c, buffer.h, client.h, expand_path.c, history.c, myndbm.h,
	release.c: Update license notices.

2005-06-28  Derek Price  <derek@ximbiot.com>

	* server.c (serve_co): Remove obsolete support for Repository request.

2005-06-10  Derek Price  <derek@ximbiot.com>

	* filesubr.c, ignore.c, import.c, vers_ts.c: Include "lstat.h".

2005-06-10  Derek Price  <derek@ximbiot.com>

	* logmsg.c (logmsg_list_to_args_proc): Add format character for
	destination tag.
	(Original patch from Todd Vierling <tv@duh.org>).

	* tag.c (pretag_list_to_args_proc): Likewise.
	(check_fileproc): Set destination tag name.
	(tag_delproc): Delete destination tag name.
	* sanity.sh (info, taginfo): Test new format strings.

2005-06-08  Derek Price  <derek@ximbiot.com>

	* parseinfo.c: Restore comparison to NULL in assignment within
	conditional to placate non-GNU compilers.  Eliminate assignments in
	conditionals where possible by GNU coding standards.  Eliminate other
	comparisons to NULL where possible.
	(Parse_Info): Make int a true bool.

2005-06-03  Derek Price  <derek@ximbiot.com>

	* client.c (force_gzip): New static global.
	(handle_force_gzip): New function.
	(responses): Add `Force-gzip'.
	(start_server): Turn on encryption and compression before potentially