@@ -19159,6 +19159,7 @@ $SPROG commit: Rebuilding administrative file database"
 	  # Now test verifymsg
 	  cat >${TESTDIR}/vscript <<EOF
 #!${TESTSHELL}
+echo vscript "\$@"
 if sed 1q < \$1 | grep '^BugId:[ ]*[0-9][0-9]*$' > /dev/null; then
     exit 0
 elif sed 1q < \$1 | grep '^BugId:[ ]*new$' > /dev/null; then
@@ -19172,6 +19173,7 @@ fi
 EOF
 	  cat >${TESTDIR}/vscript2 <<EOF
 #!${TESTSHELL}
+echo vscript2 "\$@"
 if test -f CVS/Repository; then
 	repo=\`cat CVS/Repository\`
 else
@@ -19190,8 +19192,8 @@ EOF
 	  else
 	    chmod +x ${TESTDIR}/vscript*
 	  fi
-	  echo "^first-dir/yet-another\\(/\\|\$\\) ${TESTDIR}/vscript2 %l" >verifymsg
-	  echo "^first-dir\\(/\\|\$\\) ${TESTDIR}/vscript %l" >>verifymsg
+	  echo "^first-dir/yet-another\\(/\\|\$\\) ${TESTDIR}/vscript2 %l %{sV}" >verifymsg
+	  echo "^first-dir\\(/\\|\$\\) ${TESTDIR}/vscript %l %{sV}" >>verifymsg
 	  echo "^missing-script\$ ${TESTDIR}/bogus %l" >>verifymsg
 	  echo "^missing-var\$ ${TESTDIR}/vscript %l \${=Bogus}" >>verifymsg
 	  # first test the directory independant verifymsg
@@ -19203,7 +19205,8 @@ $SPROG commit: Rebuilding administrative file database"
 	  cd ../first-dir
 	  echo line2 >>file1
 	  dotest_fail info-v2 "${testcvs} -q ci -m bogus" \
-"No BugId found\.
+"vscript $TMPDIR/[a-zA-Z0-9]* file1 1\.3
+No BugId found\.
 ${SPROG} \[commit aborted\]: Message verification failed"
 
 	  cat >${TESTDIR}/comment.tmp <<EOF
@@ -19211,7 +19214,8 @@ BugId: 42
 and many more lines after it
 EOF
 	  dotest info-v3 "${testcvs} -q ci -F ${TESTDIR}/comment.tmp" \
-"$CVSROOT_DIRNAME/first-dir/file1,v  <--  file1
+"vscript $TMPDIR/[a-zA-Z0-9]* file1 1\.3
+$CVSROOT_DIRNAME/first-dir/file1,v  <--  file1
 new revision: 1\.4; previous revision: 1\.3"
 	  rm ${TESTDIR}/comment.tmp
 
@@ -19221,17 +19225,20 @@ new revision: 1\.4; previous revision: 1\.3"
 	  touch file2
 	  dotest_fail info-v4 \
 	    "${testcvs} import -m bogus first-dir/another x y" \
-"No BugId found\.
+"vscript $TMPDIR/[a-zA-Z0-9]* - Imported sources NONE
+No BugId found\.
 ${SPROG} \[import aborted\]: Message verification failed"
 
 	  # now verify that directory dependent verifymsgs work
 	  dotest info-v5 \
 	    "${testcvs} import -m bogus first-dir/yet-another x y" \
-"${TESTDIR}/wnt/another-dir
+"vscript2 $TMPDIR/[a-zA-Z0-9]* - Imported sources NONE
+$TESTDIR/wnt/another-dir
 N first-dir/yet-another/file2
 
 No conflicts created by this import" \
-"${CVSROOT_DIRNAME}/first-dir/yet-another
+"vscript2 $TMPDIR/[a-zA-Z0-9]* - Imported sources NONE
+$CVSROOT_DIRNAME/first-dir/yet-another
 N first-dir/yet-another/file2
 
 No conflicts created by this import"
@@ -19249,12 +19256,14 @@ No conflicts created by this import"
 	  if $remote; then
 	    dotest_fail info-v6r \
 	      "${testcvs} import -m bogus first-dir/yet-another/and-another x y" \
-"${CVSROOT_DIRNAME}/first-dir/yet-another/and-another
-${SPROG} \[import aborted\]: Message verification failed"
+"vscript2 $TMPDIR/[a-zA-Z0-9]* - Imported sources NONE
+$CVSROOT_DIRNAME/first-dir/yet-another/and-another
+$SPROG \[import aborted\]: Message verification failed"
 	  else
 	    dotest info-v6 \
 	      "${testcvs} import -m bogus first-dir/yet-another/and-another x y" \
-"${TESTDIR}/wnt/another-dir
+"vscript2 $TMPDIR/[a-zA-Z0-9]* - Imported sources NONE
+$TESTDIR/wnt/another-dir
 N first-dir/yet-another/and-another/file2
 
 No conflicts created by this import"
@@ -19291,7 +19300,8 @@ BugId: new
 See what happens next.
 EOF
 	  dotest info-reread-2 "${testcvs} -q ci -F ${TESTDIR}/comment.tmp" \
-"$CVSROOT_DIRNAME/first-dir/file1,v  <--  file1
+"vscript $TMPDIR/[a-zA-Z0-9]* file1 1\.4
+$CVSROOT_DIRNAME/first-dir/file1,v  <--  file1
 new revision: 1\.5; previous revision: 1\.4"
 	  dotest info-reread-3 "${testcvs} -q log -N -r1.5 file1" "
 .*
@@ -19316,7 +19326,8 @@ BugId: new
 See what happens next with stat.
 EOF
 	  dotest info-reread-5 "${testcvs} -q ci -F ${TESTDIR}/comment.tmp" \
-"$CVSROOT_DIRNAME/first-dir/file1,v  <--  file1
+"vscript $TMPDIR/[a-zA-Z0-9]* file1 1\.5
+$CVSROOT_DIRNAME/first-dir/file1,v  <--  file1
 new revision: 1\.6; previous revision: 1\.5"
 	  dotest info-reread-6 "${testcvs} -q log -N -r1.6 file1" "
 .*
@@ -19341,7 +19352,8 @@ BugId: new
 See what happens next.
 EOF
 	  dotest info-reread-8 "${testcvs} -q ci -F ${TESTDIR}/comment.tmp" \
-"$CVSROOT_DIRNAME/first-dir/file1,v  <--  file1
+"vscript $TMPDIR/[a-zA-Z0-9]* file1 1\.6
+$CVSROOT_DIRNAME/first-dir/file1,v  <--  file1
 new revision: 1\.7; previous revision: 1\.6"
 	  dotest info-reread-6 "${testcvs} -q log -N -r1.7 file1" "
 .*
